# Copyright 2017
#   Pawel Herman - Karlsruhe Institute of Technology - pherman@ira.uka.de
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE or copy at http://www.boost.org/LICENSE_1_0.txt)

ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src
EXTRA_DIST = bootstrap
dist_doc_DATA = README.md

