# Copyright 2017
#   Pawel Herman - Karlsruhe Institute of Technology - pherman@ira.uka.de
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE or copy at http://www.boost.org/LICENSE_1_0.txt)

AC_INIT(happah, 0.0, pherman@ira.uka.de)
AC_CONFIG_AUX_DIR(build)
AC_CONFIG_MACRO_DIR(m4)

AM_INIT_AUTOMAKE(foreign)

AC_PROG_CXX
AM_PROG_LIBTOOL

AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT

