# Copyright 2017
#   Pawel Herman - Karlsruhe Institute of Technology - pherman@ira.uka.de
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE or copy at http://www.boost.org/LICENSE_1_0.txt)

bin_PROGRAMS = happah
happah_SOURCES = \
     main.cpp \
     Viewer.cpp \
     Window.cpp
happah_CPPFLAGS = -std=c++1y -I/usr/include/eigen3
happah_LDFLAGS = -lGL -lGLU -lglfw3 -lXinerama -lXcursor -lX11 -lXxf86vm -lXrandr -lpthread -lXi -lhappah -lhappah-graphics -lboost_iostreams -ldl

